APIs/googleapis.com/cloudtrace/v1/python-client/README.md
# openapi-client
Sends application trace data to Cloud Trace for viewing. Trace data is collected for all App Engine applications by default. Trace data from other applications can be provided using this API. This library is used to interact with the Cloud Trace API directly. If you are looking to instrument your application for Cloud Trace, we recommend using OpenTelemetry. 

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://cloudtrace.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://cloudtrace.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.ProjectsApi(api_client)
    project_id = 'project_id_example' # str | Required. ID of the Cloud project where the trace data is stored.
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    traces = openapi_client.Traces() # Traces |  (optional)

    try:
        api_response = api_instance.cloudtrace_projects_patch_traces(project_id, xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, traces=traces)
        print("The response of ProjectsApi->cloudtrace_projects_patch_traces:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling ProjectsApi->cloudtrace_projects_patch_traces: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudtrace.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ProjectsApi* | [**cloudtrace_projects_patch_traces**](docs/ProjectsApi.md#cloudtrace_projects_patch_traces) | **PATCH** /v1/projects/{projectId}/traces | 
*ProjectsApi* | [**cloudtrace_projects_traces_get**](docs/ProjectsApi.md#cloudtrace_projects_traces_get) | **GET** /v1/projects/{projectId}/traces/{traceId} | 
*ProjectsApi* | [**cloudtrace_projects_traces_list**](docs/ProjectsApi.md#cloudtrace_projects_traces_list) | **GET** /v1/projects/{projectId}/traces | 


## Documentation For Models

 - [ListTracesResponse](docs/ListTracesResponse.md)
 - [Trace](docs/Trace.md)
 - [TraceSpan](docs/TraceSpan.md)
 - [Traces](docs/Traces.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
 - **https://www.googleapis.com/auth/trace.append**: Write Trace data for a project or application
 - **https://www.googleapis.com/auth/trace.readonly**: Read Trace data for a project or application

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
 - **https://www.googleapis.com/auth/trace.append**: Write Trace data for a project or application
 - **https://www.googleapis.com/auth/trace.readonly**: Read Trace data for a project or application


## Author




